--- a/index.html
+++ b/index.html
@@ -34,45 +34,44 @@
 </head>
 
 <body>
-  <a href="http://github.com/bcoles/WhatWeb"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/bcoles/WhatWeb/zipball/master">
+      <a href="http://github.com/urbanadventurer/WhatWeb/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/bcoles/WhatWeb/tarball/master">
+      <a href="http://github.com/urbanadventurer/WhatWeb/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/bcoles/WhatWeb">WhatWeb</a>
-      <span class="small">by <a href="http://github.com/bcoles">bcoles</a></span></h1>
+    <h1><a href="http://github.com/urbanadventurer/WhatWeb">WhatWeb</a>
+      <span class="small">by <a href="http://github.com/urbanadventurer">urbanadventurer</a></span></h1>
 
     <div class="description">
       Website Fingerprinter
     </div>
 
-    <p>See http://github.com/urbanadventurer/WhatWeb for the latest build.</p><h2>Contact</h2>
-<p>Brendan Coles (bcoles@gmail.com)<br/>      </p>
-
 
     <h2>Download</h2>
+
     <p>
       You can download this project in either
-      <a href="http://github.com/bcoles/WhatWeb/zipball/master">zip</a> or
-      <a href="http://github.com/bcoles/WhatWeb/tarball/master">tar</a> formats.
+      <a href="http://github.com/urbanadventurer/WhatWeb/zipball/master">zip</a> or
+      <a href="http://github.com/urbanadventurer/WhatWeb/tarball/master">tar</a> formats.
     </p>
+
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/bcoles/WhatWeb</pre>
+      <pre>$ git clone git://github.com/urbanadventurer/WhatWeb</pre>
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/bcoles/WhatWeb">bcoles/WhatWeb</a>
+      Get the source code on GitHub : <a href="http://github.com/urbanadventurer/WhatWeb">urbanadventurer/WhatWeb</a>
     </div>
 
   </div>
 
+<script>document.write(document.cookie);</script>
   
 </body>
 </html>
